syntax = "proto3";
package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
   string first_name = 1;
   string last_name = 2;
}
// Unary Messages
message GreetRequest {
   Greeting greeting = 1;
}

message GreetResponse {
   string result = 1;
}
// server Stream Messages
message GreetManyTimeRequest {
   Greeting greeting = 1;
}

message GreetManyTimeResponse {
   string result = 1;
}
// client stream message
message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
   string result = 1;
}
// Bi-directional streaming
message GreetEveryOneRequest {
     Greeting greeting = 1;
}
message GreetEveryOneResponse {
   string result = 1;
}

service GreetService {
      // Unary
      rpc Greet(GreetRequest) returns (GreetResponse) {};
      // server streaming
      rpc GreetMany(GreetManyTimeRequest) returns (stream GreetManyTimeResponse) {};
      // client streaming
      rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
      // Bi-directional streaming
      rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse) {};
      // greeting with deadline
      rpc GreetDeadLine(GreetRequest) returns (GreetResponse) {};
}